adding missing publisher

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "junglepup",
+    "publisher": "keller00",
     "displayName": "Jungle Pup",
     "description": "A puppy jungle aesthetic theme",
     "version": "0.0.1",
