--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,16 @@
 {
 	"version": "0.2.0",
     "configurations": [
+    {
+        "name": "Build theme",
+        "request": "launch",
+        "runtimeArgs": [
+            "run-script",
+            "build"
+        ],
+        "runtimeExecutable": "npm",
+        "type": "pwa-node"
+    },
         {
             "name": "Extension",
             "type": "extensionHost",
