--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
             {
                 "label": "Jungle Pup",
                 "uiTheme": "vs-dark",
-                "path": "./themes/JunglePup-color-theme.json"
+                "path": "./themes/JunglePup-regular-color-theme.json"
             }
         ]
     },
     "scripts": {
-        "build": "node build",
+        "build": "ts-node src/build.ts",
         "publish": "vsce publish"
     },
     "devDependencies": {
+        "@types/node": "^20.4.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6",
         "vsce": "^2.7.0"
     }
 }
