adding open-vsx release support closes #18

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,9 +13,16 @@ jobs:
           node-version: 16
       - name: Install dev dependencies
         run: npm ci
+      - name: Publish to Open VSX Registry
+        uses: HaaLeo/publish-vscode-extension@v1
+        id: publishToOpenVSX
+        with:
+          pat: ${{ secrets.OPEN_VSX_TOKEN }}
+          preRelease: ${{github.event.release.prerelease}}
       - name: Publish to Visual Studio Marketplace
         uses: HaaLeo/publish-vscode-extension@v1
         with:
           pat: ${{ secrets.VSCE_PAT }}
           registryUrl: https://marketplace.visualstudio.com
           preRelease: ${{github.event.release.prerelease}}
+          extensionFile: ${{ steps.publishToOpenVSX.outputs.vsixPath }}
