--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     },
     "scripts": {
         "build": "ts-node src/build.ts",
-        "publish": "vsce publish"
+        "publish": "vsce publish",
+        "release": "standard-version"
     },
     "devDependencies": {
+        "@commitlint/cli": "^18.4.4",
+        "@commitlint/config-conventional": "^18.4.4",
         "@types/node": "^20.4.0",
+        "@vscode/vsce": "^2.22.0",
+        "husky": "^8.0.0",
+        "standard-version": "^9.5.0",
         "ts-node": "^10.9.1",
-        "typescript": "^5.1.6",
-        "vsce": "^2.15.0"
+        "typescript": "^5.1.6"
     }
 }
