--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         ]
     },
     "scripts": {
+        "lint": "npx eslint --ext .ts src/",
         "build": "ts-node src/build.ts",
         "publish": "vsce publish",
         "release": "standard-version"
@@ -33,10 +34,16 @@
         "@commitlint/cli": "^18.4.4",
         "@commitlint/config-conventional": "^18.4.4",
         "@types/node": "^20.4.0",
+        "@typescript-eslint/eslint-plugin": "^6.18.1",
         "@vscode/vsce": "^2.22.0",
+        "eslint": "^8.56.0",
+        "eslint-config-standard-with-typescript": "^43.0.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-n": "^16.6.2",
+        "eslint-plugin-promise": "^6.1.1",
         "husky": "^8.0.0",
         "standard-version": "^9.5.0",
         "ts-node": "^10.9.1",
-        "typescript": "^5.1.6"
+        "typescript": "^5.3.3"
     }
 }
