ci: add new lint check

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,19 @@ on:
   pull_request:
 
 jobs:
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: latest
+          cache: npm
+      - name: Install dev dependencies
+        run: npm ci
+      - name: Run linting
+        run: npm run lint
   build:
     name: Build
     runs-on: ubuntu-latest
