--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,8 @@ on:
     types: [published]
 
 name: Deploy Extension
+permissions:
+  contents: write
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -10,19 +12,26 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: latest
+          cache: npm
       - name: Install dev dependencies
         run: npm ci
-      - name: Publish to Open VSX Registry
-        uses: HaaLeo/publish-vscode-extension@v1
-        id: publishToOpenVSX
-        with:
-          pat: ${{ secrets.OPEN_VSX_TOKEN }}
-          preRelease: ${{github.event.release.prerelease}}
-      - name: Publish to Visual Studio Marketplace
-        uses: HaaLeo/publish-vscode-extension@v1
-        with:
-          pat: ${{ secrets.VSCE_PAT }}
-          registryUrl: https://marketplace.visualstudio.com
-          preRelease: ${{github.event.release.prerelease}}
-          extensionFile: ${{ steps.publishToOpenVSX.outputs.vsixPath }}
+      # - name: Publish to Open VSX Registry
+      #   uses: HaaLeo/publish-vscode-extension@v1
+      #   id: publishToOpenVSX
+      #   with:
+      #     pat: ${{ secrets.OPEN_VSX_TOKEN }}
+      #     preRelease: ${{ github.event.release.prerelease }}
+      # - name: Publish to Visual Studio Marketplace
+      #   uses: HaaLeo/publish-vscode-extension@v1
+      #   with:
+      #     pat: ${{ secrets.VSCE_PAT }}
+      #     registryUrl: https://marketplace.visualstudio.com
+      #     preRelease: ${{ github.event.release.prerelease }}
+      #     extensionFile: ${{ steps.publishToOpenVSX.outputs.vsixPath }}
+      - name: Add vsix file to release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run:
+          npx vsce pack
+          gh release upload ${{ github.event.release.tag_name }} junglepup-*.vsix
