--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Add vsix file to release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run:
+        run: |
           npx vsce pack
           gh release upload ${{ github.event.release.tag_name }} junglepup-*.vsix
