chore!: renaming "Jungle Pup" theme to "Jungle Pup Dense"
BREAKING CHANGE: "Jungle Pup Dense" color theme might need to be selected again after update

--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "contributes": {
         "themes": [
             {
-                "label": "Jungle Pup",
+                "label": "Jungle Pup Dense",
                 "uiTheme": "vs-dark",
-                "path": "./themes/JunglePup-regular-color-theme.json"
+                "path": "./themes/JunglePup-dense-color-theme.json"
             }
         ]
     },
