--- a/.github/workflows/commit_msg.yml
+++ b/.github/workflows/commit_msg.yml
@@ -17,10 +17,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y git
-      - name: Install commitlint
-        run: |
-          npm install conventional-changelog-conventionalcommits
-          npm install commitlint@latest
+      - name: Install dev dependencies
+        run: npm ci
       - name: Validate current commit (last commit) with commitlint
         if: github.event_name == 'push'
         run: npx commitlint --from HEAD~1 --to HEAD --verbose
