--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,3 +34,10 @@ jobs:
         run: npm ci
       - name: Build theme
         run: npm run build
+      - name: Build extension
+        run: npm run package
+      - name: Upload built extension
+        uses: actions/upload-artifact@v4
+        with:
+          name: extension
+          path: junglepup-*.vsix
