--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
                 "label": "Jungle Pup Dense",
                 "uiTheme": "vs-dark",
                 "path": "./themes/JunglePup-dense-color-theme.json"
+            },
+            {
+                "label": "Jungle Pup Light",
+                "uiTheme": "vs",
+                "path": "./themes/JunglePup-light-color-theme.json"
             }
         ]
     },
