--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "include": ["src"],
   "exclude": ["node_modules"],
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
     "target": "es2016",
     "module": "commonjs",
     "rootDir": "./src",
